<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_action_deselect">Cancel Selection</string>
    <string name="accessibility_action_select">Select</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_button">Button</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_day_add_location">Add Place</string>
    <string name="accessibility_day_add_person">Add Person</string>
    <string name="accessibility_day_view_header">Day View</string>
    <string name="accessibility_edit">Edit</string>
    <string name="accessibility_location">Place %s</string>
    <string name="accessibility_location_selected">Place %s is selected</string>
    <string name="accessibility_location_unselected">Place %s is not selected</string>
    <string name="accessibility_logo">\#OstaniZdrav App</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_person">Person %s</string>
    <string name="accessibility_person_selected">Person %s is selected</string>
    <string name="accessibility_person_unselected">Person %s is not selected</string>
    <string name="accessibility_statistics_card_announcement">Statistics tile</string>
    <string name="accessibility_statistics_card_navigation_information">Swipe horizontally between the tiles to display more statistics</string>
    <string name="analytics_userinput_agegroup_0_to_29" />
    <string name="analytics_userinput_agegroup_30_to_59" />
    <string name="analytics_userinput_agegroup_from_60" />
    <string name="analytics_userinput_agegroup_title" />
    <string name="analytics_userinput_agegroup_unspecified" />
    <string name="analytics_userinput_district_title" />
    <string name="analytics_userinput_district_unspecified" />
    <string name="analytics_userinput_federalstate_bb" />
    <string name="analytics_userinput_federalstate_be" />
    <string name="analytics_userinput_federalstate_bw" />
    <string name="analytics_userinput_federalstate_by" />
    <string name="analytics_userinput_federalstate_hb" />
    <string name="analytics_userinput_federalstate_he" />
    <string name="analytics_userinput_federalstate_hh" />
    <string name="analytics_userinput_federalstate_mv" />
    <string name="analytics_userinput_federalstate_ni" />
    <string name="analytics_userinput_federalstate_nrw" />
    <string name="analytics_userinput_federalstate_rp" />
    <string name="analytics_userinput_federalstate_sh" />
    <string name="analytics_userinput_federalstate_sl" />
    <string name="analytics_userinput_federalstate_sn" />
    <string name="analytics_userinput_federalstate_st" />
    <string name="analytics_userinput_federalstate_th" />
    <string name="analytics_userinput_federalstate_title" />
    <string name="analytics_userinput_federalstate_unspecified" />
    <string name="app_name">\#OstaniZdrav</string>
    <string name="app_shortcut_contact_diary_title">Add Entry</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_nav_diary_title">Journal</string>
    <string name="bottom_nav_home_title">Start Screen</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_back">Back to previous page</string>
    <string name="button_menu">Menu</string>
    <string name="button_proceed">Continue Button</string>
    <string name="button_share">Share</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_diary_add_location_save_button">Save</string>
    <string name="contact_diary_add_location_text_input_hint">Description</string>
    <string name="contact_diary_add_location_title">Place</string>
    <string name="contact_diary_add_person_save_button">Save</string>
    <string name="onboarding_body">"Turn your smartphone into a coronavirus warning system. Infection with this virus can cause COVID-19 disease or be asymptomatic.
Get an overview of your risk status and find out whether you’ve had close contact with anyone who has a confirmed SARS-CoV-2 infection in the last 14 days."</string>
    <string name="onboarding_body_emphasized" />
    <string name="onboarding_button_start">Let’s Get Started</string>
    <string name="onboarding_headline">Let’s fight coronavirus together</string>
    <string name="onboarding_illustration_description">A group of persons use their smartphones around town.</string>
    <string name="onboarding_onboarding_accessibility_title">Onboarding page 1 of 5: Fighting coronavirus together</string>
    <string name="onboarding_subtitle">More protection for you and for us all. By using the #OstaniZdrav App we can break chains of infection much quicker.</string>
    <string name="onboarding_tracing_easy_language_explanation"><a href="https://arhiv.mm.gov.si/vlada/MJJ/TolmačkaAPPvodič.mp4">Predstavitev aplikacije v slovenskem znakovnem jeziku</a></string>
    <string name="submission_contact_body" />
    <string name="submission_contact_body_other" />
    <string name="submission_contact_headline">To obtain a TAN code:</string>
    <string name="submission_contact_number_display">NIJZ</string>
    <string name="submission_contact_operating_hours_body" />
    <string name="submission_contact_step_1_body">Click on the Open form button to access the website</string>
    <string name="submission_contact_step_1_content">Click on the Open form button to access the NIJZ website</string>
    <string name="submission_contact_step_2_body">By entering the data in the online form, you will recieve a TAN code via SMS.</string>
    <string name="submission_contact_step_2_content">By entering the data in the online form, you will recieve a TAN code via SMS.</string>
    <string name="submission_done_button_done">Done</string>
    <string name="submission_symptom_calendar_body">"Try to pinpoint the onset of symptoms as accurately as possible. If you can't pinpoint the exact date, you can choose from the options listed below. Then click Finish."</string>
    <string name="submission_symptom_calendar_headline">When did you first notice the symptoms?</string>
    <string name="submission_symptom_further_button">Next</string>
    <string name="submission_symptom_initial_explanation">If you do not want to provide this information, select “No answer”.</string>
    <string name="submission_symptom_initial_headline">Have you experienced one or more of the following symptoms in the last few days?</string>
    <string name="submission_symptom_less_seven">In the last 7 days</string>
    <string name="submission_symptom_more_two_weeks">More than 2 weeks ago</string>
    <string name="submission_symptom_negative_button">No</string>
    <string name="submission_symptom_no_information_button">No answer</string>
    <string name="submission_symptom_one_two_weeks">1-2 weeks ago</string>
    <string name="submission_symptom_positive_button">Yes</string>
    <string name="submission_symptom_verify">No answer</string>
    <string name="submission_test_result_headline">Thank you for your entering</string>
    <string name="submission_test_result_invalid_remove_test_button">Remove the test</string>
    <string name="submission_test_result_invalid_steps_invalid_body" />
    <string name="submission_test_result_invalid_steps_invalid_heading">Your Test Result</string>
    <string name="submission_test_result_steps_added_body" />
    <string name="submission_test_result_steps_added_heading">Test added successfully</string>
    <string name="submission_test_result_subtitle" />
    <string name="test_result_card_headline">Your diagnosis:</string>
</resources>