<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/submission_test_result_container" android:tag="layout/fragment_submission_test_result_invalid_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/submission_test_result_headline" android:accessibilityLiveRegion="assertive"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/submission_test_result_header" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/include_header" />
    <ScrollView android:id="@id/submission_test_result_content" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/button_padding_top_bottom" android:importantForAccessibility="yes" android:accessibilityLiveRegion="assertive" app:layout_constraintBottom_toTopOf="@id/submission_test_result_button_invalid_remove_test" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/submission_test_result_header">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <de.rki.coronawarnapp.ui.view.TestResultSectionView android:id="@id/submission_test_result_section" android:focusable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="@dimen/spacing_small" android:importantForAccessibility="yes" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:test_result_section_headline="@string/test_result_card_headline" />
            <TextView android:id="@id/submission_test_result_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_normal" android:text="@string/submission_test_result_subtitle" android:accessibilityHeading="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/submission_test_result_section" style="@style/headline5" />
            <de.rki.coronawarnapp.ui.view.SimpleStepEntry android:id="@id/test_result_invalid_steps_added" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/submission_test_result_subtitle" app:simple_step_entry_text="@string/submission_test_result_steps_added_body" app:simple_step_entry_title="@string/submission_test_result_steps_added_heading" app:step_entry_final="false" app:step_entry_icon="@drawable/ic_test_result_step_done" />
            <de.rki.coronawarnapp.ui.view.SimpleStepEntry android:id="@id/test_result_invalid_steps_invalid_result" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/test_result_invalid_steps_added" app:simple_step_entry_text="@string/submission_test_result_invalid_steps_invalid_body" app:simple_step_entry_title="@string/submission_test_result_invalid_steps_invalid_heading" app:step_entry_final="true" app:step_entry_icon="@drawable/ic_test_result_step_invalid" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button android:id="@id/submission_test_result_button_invalid_remove_test" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_normal" android:text="@string/submission_test_result_invalid_remove_test_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/buttonPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>