<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:tag="layout/include_submission_contact_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:bind="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/submission_contact_illustration" android:tag="binding_2" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_submission_illustration_hotline" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="parent" bind:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@id/submission_contact_body" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_contact_body" bind:layout_constraintEnd_toStartOf="@id/guideline_end" bind:layout_constraintStart_toStartOf="@id/guideline_start" bind:layout_constraintTop_toBottomOf="@id/submission_contact_illustration" style="@style/subtitle" />
        <TextView android:id="@id/submission_contact_headline" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/submission_contact_headline" android:accessibilityHeading="true" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="@id/guideline_start" bind:layout_constraintTop_toBottomOf="@id/submission_contact_body" style="@style/headline5" />
        <de.rki.coronawarnapp.ui.view.StepEntry android:id="@id/submission_contact_step_1" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:contentDescription="@string/submission_contact_step_1_content" bind:layout_constraintEnd_toStartOf="@id/guideline_end" bind:layout_constraintStart_toStartOf="@id/guideline_start" bind:layout_constraintTop_toBottomOf="@id/submission_contact_headline" bind:step_entry_final="false" bind:step_entry_icon="@drawable/ic_main_overview_1">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/submission_contact_step_1_body" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_icon_margin" android:text="@string/submission_contact_step_1_body" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="parent" bind:layout_constraintTop_toTopOf="parent" style="@style/subtitle" />
                <TextView android:textColor="@color/colorTextTint" android:id="@id/submission_contact_step_1_number" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_contact_number_display" android:accessibilityHeading="true" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="parent" bind:layout_constraintTop_toBottomOf="@id/submission_contact_step_1_body" style="@style/headline5" />
                <TextView android:id="@id/submission_contact_operating_hours_body" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_contact_operating_hours_body" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="parent" bind:layout_constraintTop_toBottomOf="@id/submission_contact_step_1_number" style="@style/body2" />
                <TextView android:id="@id/submission_contact_body_other" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_contact_body_other" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="parent" bind:layout_constraintTop_toBottomOf="@id/submission_contact_operating_hours_body" style="@style/body2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </de.rki.coronawarnapp.ui.view.StepEntry>
        <de.rki.coronawarnapp.ui.view.StepEntry android:id="@id/submission_contact_step_2" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:contentDescription="@string/submission_contact_step_2_content" bind:layout_constraintEnd_toStartOf="@id/guideline_end" bind:layout_constraintStart_toStartOf="@id/guideline_start" bind:layout_constraintTop_toBottomOf="@id/submission_contact_step_1" bind:step_entry_final="true" bind:step_entry_icon="@drawable/ic_main_overview_2">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_icon_margin" android:text="@string/submission_contact_step_2_body" bind:layout_constraintEnd_toEndOf="parent" bind:layout_constraintStart_toStartOf="parent" bind:layout_constraintTop_toTopOf="parent" style="@style/subtitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </de.rki.coronawarnapp.ui.view.StepEntry>
        <include layout="@layout/merge_guidelines_side" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>