<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/onboarding_container" android:tag="layout/fragment_onboarding_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:contentDescription="@string/onboarding_onboarding_accessibility_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/onboarding_button_next" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="@dimen/spacing_medium" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/onboarding_illustration" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:contentDescription="@string/onboarding_illustration_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_illustration_together" />
            <TextView android:id="@id/onboarding_headline" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginRight="@dimen/spacing_normal" android:text="@string/onboarding_headline" android:layout_marginHorizontal="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/onboarding_illustration" style="@style/headline4" />
            <TextView android:id="@id/onboarding_subtitle" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginRight="@dimen/spacing_normal" android:text="@string/onboarding_subtitle" android:layout_marginHorizontal="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/onboarding_headline" style="@style/subtitle" />
            <TextView android:textColorLink="@color/colorTextTint" android:autoLink="email|web" android:id="@id/onboarding_body" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginRight="@dimen/spacing_normal" android:text="@string/onboarding_body" android:layout_marginHorizontal="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/onboarding_subtitle" style="@style/subtitle" />
            <TextView android:id="@id/onboarding_body_emphasized" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginRight="@dimen/spacing_normal" android:text="@string/onboarding_body_emphasized" android:layout_marginHorizontal="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/onboarding_body" style="@style/subtitle" />
            <TextView android:textColorLink="@color/colorTextTint" android:linksClickable="true" android:id="@id/onboarding_easy_language" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginRight="@dimen/spacing_normal" android:text="@string/onboarding_tracing_easy_language_explanation" android:layout_marginHorizontal="@dimen/spacing_normal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/onboarding_body_emphasized" style="@style/subtitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button android:id="@id/onboarding_button_next" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginRight="@dimen/spacing_normal" android:layout_marginBottom="@dimen/spacing_small" android:text="@string/onboarding_button_start" android:layout_marginHorizontal="@dimen/spacing_normal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/buttonPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>