<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_submission_symptom_intro_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/submission_symptom_header" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/scrollView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/include_header" />
    <ScrollView android:id="@id/scrollView" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/symptom_button_next" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/submission_symptom_header">
        <LinearLayout android:orientation="vertical" android:id="@id/submission_symptom_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal">
            <TextView android:id="@id/submission_symptom_initial_headline" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:text="@string/submission_symptom_initial_headline" android:accessibilityHeading="true" style="@style/headline6" />
            <de.rki.coronawarnapp.ui.view.BulletPointList android:id="@id/further_info_text" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" app:entries="@array/submission_symptom_symptom_bullets" />
            <TextView android:id="@id/submission_symptom_intro_explanation" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:text="@string/submission_symptom_initial_explanation" style="@style/subtitleMedium" />
            <Button android:enabled="true" android:id="@id/target_button_apply" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_symptom_positive_button" style="@style/selectionButton" />
            <Button android:enabled="true" android:id="@id/target_button_reject" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_symptom_negative_button" style="@style/selectionButton" />
            <Button android:enabled="true" android:id="@id/target_button_verify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_small" android:text="@string/submission_symptom_no_information_button" style="@style/selectionButton" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/symptom_button_next" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_normal" android:layout_marginTop="@dimen/spacing_small" android:layout_marginRight="@dimen/spacing_normal" android:layout_marginBottom="@dimen/spacing_small" android:text="@string/submission_symptom_further_button" android:layout_marginHorizontal="@dimen/spacing_normal" android:layout_marginVertical="@dimen/spacing_small" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/scrollView" style="@style/buttonPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>